methylKit 0.6
--------------

NEW FUNCTIONS AND FEATURES

* new function segDiffMeth()  uses a 3 state HMM (Hidden Markov Model) to segment the genome into hypo, hyper and not differentially methylated regions. Users can also run the function completely unsupervised with different number of states. Operates on methylBase or methylDiff objects.

* new function segMeth()  uses a 3 state HMM to segment the genome into low, medium, high methylation regions. Operates on methylRaw objects.

* new function segFilter()  filters the segments based on DMC content, HMM state and number of covered bases. Operates on segment data frame output by segDiffMeth() and a methylDiff object used to get HMM segmentation.

* new function seg2bed()  writes out a color coded BED track file showing segmentation of genome by segDiffMeth() or segMeth() functions. Operates on segment data frame output by segDiffMeth() or segMeth() functions.

* new function seg2GRanges()  produced GRanges object for segments. Operates on segment data frame output by segDiffMeth() or segMeth() functions.


methylKit 0.5.2
--------------

NEW FUNCTIONS AND FEATURES

* new function pool() sums up coverage, numCs and numTs values within each group so one representative sample for each group will be created in a new methylBase object.

* new function normalizeCoverage()  normalizes coverage and associated number of Cs and number of Ts values between samples using a scaling factor derived from the ratio between mean or median of coverage distributions of samples.


methylKit 0.5.1
--------------

IMPROVEMENTS AND BUG FIXES

* calculateDiffMeth() can now deal with differential methylation calculations where one group has multiple samples but the other one has only one.


methylKit 0.5
--------------

NEW FUNCTIONS AND FEATURES
