@@ -2,6 +2,8 @@ import(methods)
 
 import(GenomicRanges)
 
+import(RHmm)
+
 #importMethodsFrom("GenomicRanges",elementMetadata,countOverlaps,findOverlaps, seqnames, seqlengths, strand,"strand<-")
 
 #importClassesFrom("GenomicRanges",GRanges,GRangesList)
@@ -11,7 +13,7 @@ importClassesFrom("IRanges", RangedData, RangedDataList, DataTable,
                   RangedSelection, SimpleList, DataFrame)
 
 importFrom("IRanges", DataFrame, IRanges, RangedDataList, RangedData,
-           RangesList, Rle,matchMatrix,findOverlaps, RangedSelection,ranges,countOverlaps,elementMetadata,"elementMetadata<-")
+                  RangesList, Rle,matchMatrix,findOverlaps, RangedSelection,ranges,countOverlaps,elementMetadata,"elementMetadata<-")
 
 importMethodsFrom("IRanges",nearest,as.data.frame)
 
@@ -23,14 +25,16 @@ importFrom("data.table", data.table)
 
 importFrom("parallel", mclapply)
 
+exportClasses(HMMFitClass)
 exportClasses(annotationByFeature)
 exportClasses(annotationByGenicParts)
 exportClasses(methylBase)
 exportClasses(methylDiff)
 exportClasses(methylRaw)
 exportClasses(methylRawList)
-exportMethods(annotate.WithFeature.Flank)
+exportMethods(PCASamples)
 exportMethods(annotate.WithFeature)
+exportMethods(annotate.WithFeature.Flank)
 exportMethods(annotate.WithGenicParts)
 exportMethods(bedgraph)
 exportMethods(calculateDiffMeth)
@@ -53,21 +57,16 @@ exportMethods(getMembers)
 exportMethods(getMethylationStats)
 exportMethods(getTargetAnnotationStats)
 exportMethods(normalizeCoverage)
-exportMethods(PCASamples)
-exportMethods(plotTargetAnnotation)
 exportMethods(percMethylation)
+exportMethods(plotTargetAnnotation)
 exportMethods(pool)
+exportMethods(read)
 exportMethods(read.bed)
 exportMethods(read.bismark)
 exportMethods(read.feature.flank)
 exportMethods(read.transcript.features)
-exportMethods(read)
 exportMethods(regionCounts)
 exportMethods(reorganize)
 exportMethods(select)
-exportMethods(segDiffMeth)
-exportMethods(segFilter)
-exportMethods(seg2bed)
-exportMethods(seg2GRanges)
 exportMethods(tileMethylCounts)
 exportMethods(unite)
