@@ -4,9 +4,6 @@
 \alias{getAssociationWithTSS,-methods}
 \alias{getAssociationWithTSS,annotationByGenicParts-method}
 \title{Get distance to nearest TSS and gene id from annotationByGenicParts}
-\usage{
-  getAssociationWithTSS(x)
-}
 \arguments{
   \item{x}{a \code{annotationByGenicParts} object}
 }
