@@ -3,9 +3,6 @@
 \alias{convert.bed2introns}
 \alias{convert.bed2introns,data.frame-method}
 \title{convert a data frame read-in from a bed file to a GRanges object for introns}
-\usage{
-  convert.bed2introns(bed.df)
-}
 \arguments{
   \item{bed.df}{a data.frame where column order and content
   resembles a bed file with 12 columns}
