@@ -4,9 +4,6 @@
 \alias{filterByCoverage,methylRaw-method}
 \alias{filterByCoverage,methylRawList-method}
 \title{filter methylRaw and methylRawList object based on read coverage}
-\usage{
-  filterByCoverage(methylObj,lo.count=NULL,lo.perc=NULL,hi.count=NULL,hi.perc=NULL)
-}
 \arguments{
   \item{methylObj}{a \code{methylRaw} or
   \code{methylRawList} object}
