@@ -4,9 +4,6 @@
 \alias{getCoverageStats,-methods}
 \alias{getCoverageStats,methylRaw-method}
 \title{get coverage stats from methylRaw object}
-\usage{
-  getCoverageStats(.Object,plot=FALSE,both.strands=FALSE,labels=TRUE,...)
-}
 \arguments{
   \item{.Object}{a \code{methylRaw} object}
 
