@@ -3,9 +3,6 @@
 \alias{getFlanks}
 \alias{getFlanks,GRanges-method}
 \title{a function to get upstream and downstream adjecent regions to a genomic feature such as CpG islands}
-\usage{
-  getFlanks(grange,flank=2000,clean=T)
-}
 \arguments{
   \item{grange}{GRanges object for the feature}
 
