@@ -3,9 +3,6 @@
 \alias{pool}
 \alias{pool,methylBase-method}
 \title{function pools replicates within groups to a single sample per group}
-\usage{
-  pool(obj,sample.ids)
-}
 \arguments{
   \item{obj}{\code{methylBase} object with two groups or
   more and each group should have multiple samples}
@@ -19,9 +16,9 @@
   a \code{methylBase} object
 }
 \description{
-  The function sums up coverage values within each group so
-  one representative sample for each group will be created
-  in a new methylBase object
+  The function sums up coverage, numCs and numTs values
+  within each group so one representative sample for each
+  group will be created in a new methylBase object
 }
 \examples{
 library(methylKit)
