@@ -3,9 +3,6 @@
 \alias{read.bed}
 \alias{read.bed,character-method}
 \title{read a bed file and convert it to GRanges}
-\usage{
-  read.bed(location,remove.unsual=TRUE)
-}
 \arguments{
   \item{location}{location of the file, a character string
   such as: "/home/user/my.bed"}
