@@ -4,9 +4,6 @@
 \alias{reorganize,methylBase-method}
 \alias{reorganize,methylRawList-method}
 \title{reorganize methylRawList and methylBase objects by creating new objects from subset of samples}
-\usage{
-  reorganize(methylObj,sample.ids,treatment)
-}
 \arguments{
   \item{methylObj}{a \code{methylRawList} or
   \code{methylBase} object}
@@ -35,14 +32,14 @@
 \examples{
 # this is a list of example files, ships with the package
 file.list=list( system.file("extdata", "test1.myCpG.txt", package = "methylKit"),
-system.file("extdata", "test2.myCpG.txt", package = "methylKit"),
-system.file("extdata", "control1.myCpG.txt", package = "methylKit"),
-system.file("extdata", "control2.myCpG.txt", package = "methylKit") )
+               system.file("extdata", "test2.myCpG.txt", package = "methylKit"),
+               system.file("extdata", "control1.myCpG.txt", package = "methylKit"),
+               system.file("extdata", "control2.myCpG.txt", package = "methylKit") )
 
 
 # read the files to a methylRawList object: myobj
 myobj=read( file.list,
-sample.id=list("test1","test2","ctrl1","ctrl2"),assembly="hg18",pipeline="amp",treatment=c(1,1,0,0))
+          sample.id=list("test1","test2","ctrl1","ctrl2"),assembly="hg18",pipeline="amp",treatment=c(1,1,0,0))
 meth=unite(myobj,destrand=TRUE)
 
 myobj2=reorganize(myobj,sample.ids=c("test1","ctrl2"),treatment=c(1,0) )
