@@ -11,7 +11,7 @@
 }
 \examples{
 # select(methylRaw.obj,1:100) # selects first hundred rows, returns a methylRaw object
-# select(methylBase.obj,1:100)
-# select(methylDiff.obj,1:100)
+ # select(methylBase.obj,1:100)
+ # select(methylDiff.obj,1:100)
 }
 
