@@ -5,6 +5,10 @@ NEW FUNCTIONS AND FEATURES
 
 * new function segDiffMeth()  uses a 3 state HMM (Hidden Markov Model) to segment the genome into hypo, hyper and not differentially methylated regions. Users can also run the function completely unsupervised with different number of states. Operates on methylBase or methylDiff objects.
 
+* new function segDiffMeth.train() uses a 3 state HMM to fit the genome into hypo,hyper and not differentially methylated regions in the semi-supervised setting. Otherwise there is no limit on states.
+
+* new function segDiffMeth.predict() uses a HMMFitClass object from segDiffMeth.train() to segment the genome into hypo,hyper and not differentially methylated regions in the semi-supervised setting. Otherwise there is no limit on states.
+
 * new function segMeth()  uses a 3 state HMM to segment the genome into low, medium, high methylation regions. Operates on methylRaw objects.
 
 * new function segFilter()  filters the segments based on DMC content, HMM state and number of covered bases. Operates on segment data frame output by segDiffMeth() and a methylDiff object used to get HMM segmentation.
